--- a/imgs/style.css
+++ b/imgs/style.css
@@ -88,3 +88,35 @@ p {
     color: var(--color-black);
     margin: 4px 0;
 }
+
+/* Navbar */
+#navbar {
+    position: sticky;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;;
+    background-color: var(--color-light-blue);
+    padding: 16px;
+}
+.navbar__logo img {
+    width: 70px;
+    height: 70px;
+}
+.navbar__menu ul {
+    display: flex;
+}
+.navbar__menu--item {
+    padding: 8px 12px;
+    margin: 0 4px;
+    cursor: pointer;
+    border-radius: var(--border-radius-size);
+}
+.navbar__menu--item.active {
+    border: 1px solid var(--color-black);
+}
+.navbar__menu--item:hover {
+    background-color: var(--color-blue);
+    color: var(--color-white);
+}
