--- a/imgs/style.css
+++ b/imgs/style.css
@@ -142,3 +142,69 @@ p {
     border: 2px solid var(--color-dark-grey);
     border-radius: var(--border-radius-size);
 }
+
+/* Section Common */
+.section {
+    text-align: center;
+    padding: 50px;
+    margin: auto;
+}
+.section__container {
+    max-width: 1200px;
+    margin: auto;
+}
+
+/* About */
+.about__stack {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 80px 0;
+}
+.stack__icon {
+    width: 170px;
+    height: 170px;
+    font-size: 70px;
+    line-height: 170px;
+    color: var(--color-blue);
+    border: 1px solid var(--color-blue);
+    border-radius: 50%;
+    margin-bottom: 16px;
+}
+.stack__icon i {
+    transition: all var(--animation-duration) ease;
+}
+.stack__icon:hover i {
+    color: var(--color-green);
+    transform: scale(1.1) rotate(-30deg);
+}
+.stack__title {
+    font-size: var(--font-medium);
+    font-weight: var(--weight-bold);
+}
+.about__education,
+.about__career {
+    margin: 24px 0;
+}
+.education, .career {
+    display: flex;
+    align-items: center;
+}
+.education__description,
+.career__description {
+    margin: 0 80px;
+    text-align: left;
+}
+.education__logo,
+.career__logo {
+    width: 100px;
+    height: 40px;
+}
+.education__name,
+.career__name {
+    font-size: var(--font-small);
+}
+.education__period,
+.career__period {
+    color: var(--color-dark-grey);
+    font-size: var(--font-micro);
+}
