--- a/imgs/style.css
+++ b/imgs/style.css
@@ -257,3 +257,83 @@ p {
 .etc {
     background-color: var(--color-grey);
 }
+
+/* Work */
+.work__categories {
+    margin: 32px;
+}
+.category__btn {
+    border: 1px solid var(--color-light-grey);
+    border-radius: var(--border-radius-size);
+    padding: 8px 32px;
+    font-size: var(--font-regular);
+    font-weight: var(--weight-semi-bold);
+}
+.category__btn.active,
+.category__btn:hover {
+    background: var(--color-blue);
+    color: var(--color-white);
+}
+.category__btn.active .category__count,
+.category__btn:hover .category__count {
+    opacity: 1;
+    top: 0;
+}
+.category__count {
+    background-color: var(--color-yellow);
+    border-radius: 50%;
+    margin-left: 10px;
+    padding: 4px 8px;
+    position: relative;
+    top: -20px;
+    left: 4px;
+    opacity: 0;
+    transition: all var(--animation-duration) ease-in;
+}
+.work__projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.project {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 280px;
+    height: 250px;
+    margin: 2px;
+    background-color: var(--color-dary-white);
+}
+.project__image {
+    max-width: 100%;
+    max-height: 100%;
+}
+.project__description {
+    position: absolute;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    top:0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    opacity: 0;
+    transition: all var(--animation-duration) ease-in;
+    transform: translateY(10px);
+}
+.project:hover .project__description {
+    opacity: 0.8;
+    transform: translateY(0px);
+}
+.project__description h3,
+.project__description p {
+    color: var(--color-white);
+}
+.project__description p span {
+    border: 1px solid var(--color-white);
+    border-radius: var(--border-radius-size);
+    padding: 2px 4px;
+    margin: 4px;
+}
