JS : scroll section + handle btn

--- a/style.css
+++ b/style.css
@@ -99,10 +99,11 @@ p {
     background-color: transparent;
     padding: 16px;
     transition: all var(--animation-duration) ease-in-out;
+    z-index: 1;
 }
 #navbar.navbar--dark {
     background-color: var(--color-light-blue);
-    padding: 8px;
+    padding: 4px;
 }
 .navbar__logo img {
     width: 70px;
