--- a/style.css
+++ b/style.css
@@ -377,6 +377,23 @@ p {
     font-weight: var(--weight-regular);
 }
 
+/* Arrow Up Button */
+.arrow-up {
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    font-size: var(--font-large);
+    color: var(--color-blue);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity var(--animation-duration) ease-in;
+}
+
+.arrow-up.visible {
+    opacity: 1;
+    pointer-events: auto;
+}
+
 /* responsive */
 @media screen and (max-width: 768px) {
     .navbar__toggle-btn {
