--- a/style.css
+++ b/style.css
@@ -176,6 +176,9 @@ p {
     justify-content: space-evenly;
     margin: 80px 0;
 }
+.ability {
+    color: var(--color-green);
+}
 .stack__icon {
     width: 170px;
     height: 170px;
